--- a/client/src/components/Dashboard/Tables/ProductsTable/ProductsTable.module.css
+++ b/client/src/components/Dashboard/Tables/ProductsTable/ProductsTable.module.css
@@ -4,11 +4,11 @@
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
-  outline: 1px solid #ccc;
+  outline: 1px solid var(--border);
 }
 
 .row span{
-  border-right: 1px solid #ccc;
+  border-right: 1px solid var(--border);
 }
 
 /* Amanejar numeros de serie, y estado independiente por cada producto en el inventario*/
