--- a/client/src/components/Dashboard/Tables/SupplierTable/SupplierRows/SupplierRows.module.css
+++ b/client/src/components/Dashboard/Tables/SupplierTable/SupplierRows/SupplierRows.module.css
@@ -1,4 +1,4 @@
 .supplier{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 100px 100px;
 }
