Update api and client

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,5 +61,6 @@ select:focus,
 select:active,
 .form-floating{
   background-color: #0002;
+  border-color: var(--border);
   color: var(--font);
 }
