--- a/client/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
+++ b/client/src/components/Dashboard/Tables/InventoryTable/Form/AddImages/AddImages.module.css
@@ -8,7 +8,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0004;
+  background-color: #0006;
 }
 
 .close{
@@ -20,9 +20,40 @@
   min-width: 600px;
   padding: 20px;
   border-radius: 10px;
-  background-color: white;
+  background-color: var(--panel);
+}
+
+.form .icon{
+  filter: invert(100);
 }
 
 .form h4{
   margin-bottom: 30px;
+}
+
+.imgList{
+  display: flex;
+  height: 70px;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid var(--border);
+  background-color: var(--background);
+}
+
+.imgList .image img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--border);
+  background-color: var(--panel);
+}
+
+.imgList .image img{
+  width: 50px;
+  height: 50px;
 }
