--- a/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/ProductData.module.css
+++ b/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/ProductData.module.css
@@ -5,6 +5,13 @@
   border: 1px solid var(--border);
 }
 
+.list{
+  display: flex;
+  flex-direction: column;
+  max-height: 600px;
+  overflow-y: scroll;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -14,18 +21,8 @@
   border: 1px solid #0002;
 }
 
-.list {
-  height: 500px;
-  overflow-y: scroll;
-}
-
-.item {
-  display: flex;
-  align-items: center;
-}
-
-.item div {
-  margin-bottom: 0;
+.container div{
+  margin-right: 10px;
 }
 
 .container button {
