--- a/client/src/components/Dashboard/Tables/ProductsTable/Form/Form.module.css
+++ b/client/src/components/Dashboard/Tables/ProductsTable/Form/Form.module.css
@@ -7,16 +7,70 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #0004;
+  background-color: #0006;
 }
 
 .form{
   padding: 20px;
-  background-color: white;
+  background-color: var(--panel);
+  border: 1px solid var(--border);
+  border-radius: 10px;
 }
 
+.close {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 30px;
+}
+
+.close h4 {
+  flex-grow: 1;
+  margin: none;
+}
 
 .inputs{
   display: flex;
+}
+
+.left{
+  width: 300px;
+  margin-right: 20px;
+}
+
+.right{
+  display: flex;
   flex-direction: column;
+  width: 300px;
+  height: 100%;
+}
+
+.container input,
+.container input:focus,
+.container input:active,
+.container textarea,
+.container textarea:focus,
+.container textarea:active,
+.container select,
+.container select:focus,
+.container select:active,
+.form-floating{
+  background-color: #0002;
+  border-color: var(--border);
+  color: var(--font);
+}
+
+.right div:first-child{
+  flex-grow: 1;
+  height: 130px;
+}
+
+.container textarea{
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.right input[type="file"]{
+  margin-bottom: 20px;
+  height: 60px;
 }
