--- a/client/src/components/Dashboard/Tables/ProductsTable/ProductRow/ProductRow.module.css
+++ b/client/src/components/Dashboard/Tables/ProductsTable/ProductRow/ProductRow.module.css
@@ -1,5 +1,13 @@
 .row{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 100px;
-  outline: 1px solid #ccc;
+  grid-template-columns: 150px 1fr 200px 100px;
+  grid-template-rows: 1fr;
+  gap: 10px;
+  padding: 10px;
+  padding-bottom: 0px;
+  outline: 1px solid var(--border);
+}
+
+.row span{
+  border-right: 1px solid var(--border);
 }
