--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,8 +10,8 @@
 /*   --background: #ccc;
   --panel: #fff;
   --border: #aaa;
-  --font: black;
-  */
+  --font: black; */
+ 
 }
 
 .btn-primary {
