--- a/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/ProductData.module.css
+++ b/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/ProductData.module.css
@@ -1,4 +1,6 @@
 .productAdd {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
   margin-left: 20px;
   border-radius: 10px;
@@ -6,10 +8,13 @@
 }
 
 .list{
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   max-height: 600px;
   overflow-y: scroll;
+  border-radius: 10px;
+  outline: 1px solid var(--border);
 }
 
 .container {
