--- a/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
+++ b/client/src/components/Dashboard/Tables/InventoryTable/Form/ProductData/Row/Row.module.css
@@ -1,3 +1,12 @@
+.container{  
+  margin: 10px 20px;
+}
+
+.productData{
+  padding: 5px;
+  margin-left: 10px;
+}
+
 .list {
   height: 500px;
   overflow-y: scroll;
@@ -8,6 +17,35 @@
   align-items: center;
 }
 
-.item div {
-  margin-bottom: 0;
+.image{
+  width: 120px;
+  height: 120px;
+  margin-right: 20px;
+  border-radius: 10px;
+  border: 1px solid var(--border);
+  background-color: var(--background);
+}
+
+.image img{
+  filter: invert(60%);
+}
+
+.image:hover{
+  cursor: pointer;
+  outline: 2px solid var(--primary-color);
+}
+.codes{
+  margin-right: 20px;
+}
+
+.codes .top{
+  display: flex;
+}
+
+.price{
+  display: flex;
+}
+
+.price .top{
+  display: flex;
 }
