--- a/client/src/components/Dashboard/Tables/SupplierTable/SupplierRows/SupplierRows.module.css
+++ b/client/src/components/Dashboard/Tables/SupplierTable/SupplierRows/SupplierRows.module.css
@@ -1,4 +1,13 @@
-.supplier{
+.row{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 100px 100px;
+  grid-template-rows: 1fr;
+  gap: 10px;
+  padding: 10px;
+  padding-bottom: 0px;
+  outline: 1px solid var(--border);
+}
+
+.row input{
+  border-right: 1px solid var(--border);
 }
