--- a/client/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
+++ b/client/src/components/Dashboard/Tables/TransactionsTable/TransactionsTable.module.css
@@ -1,7 +1,6 @@
 .row {
   display: grid;
-  grid-template-columns: repeat(2, 100px) repeat(4, 1fr) 100px 100px;
-  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 100px) repeat(2, 1fr) repeat(2, 100px) repeat(3, 80px);
   gap: 10px;
   padding: 10px;
   outline: 1px solid var(--border);
@@ -13,4 +12,9 @@
 
 .firstrow {
   padding-right: 25px;
+}
+
+.buttons {
+  text-align: center;
+  padding: 0px !important;
 }
