--- a/client/src/components/Dashboard/Tables/InventoryTable/SupplierDetails/SupplierDetails.module.css
+++ b/client/src/components/Dashboard/Tables/InventoryTable/SupplierDetails/SupplierDetails.module.css
@@ -34,3 +34,15 @@
   gap: 10px;
   margin-bottom: 10px;
 }
+
+.dataContainer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  width: 200px;
+}
+
+.dataContainer span:last-child {
+  color: #000a;
+}
