--- a/client/src/components/Dashboard/Tables/SupplierTable/SupplierTable.module.css
+++ b/client/src/components/Dashboard/Tables/SupplierTable/SupplierTable.module.css
@@ -1,12 +1,16 @@
-.card{
+.row{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 100px 80px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 80px 80px;
   grid-template-rows: 1fr;
   gap: 10px;
   padding: 10px;
   outline: 1px solid var(--border);
 }
 
-.card span{
+.row span{
   border-right: 1px solid var(--border);
+}
+
+.firstRow{
+  padding-right: 20px;
 }
